<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluebg"
    android:paddingTop="20dp"
    tools:context=".ui.QuestionActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="@string/question" />

        <ImageView
            android:id="@+id/flag_image_view"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_flag"
            tools:src="@drawable/australia" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:weightSum="10"

            >

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.5"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                tools:progress="11" />

            <TextView
                android:id="@+id/text_view_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/_0_11" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:minHeight="50dp"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:text="Option 1" />

        <TextView
            android:id="@+id/textView_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:minHeight="50dp"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:text="Option 2" />

        <TextView
            android:id="@+id/textView_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:minHeight="50dp"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:text="Option 3" />

        <TextView
            android:id="@+id/textView_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:minHeight="50dp"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:text="Option 4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/check_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/blue1"
            android:minHeight="50dp"
            android:text="@string/check"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>